# aumos-federated-learning

./: .env.example  .gitignore  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  pyproject.toml
.github/workflows/: ci.yml
benchmarks/fl/: data_partitioning.py  reproduce_papers.py
src/aumos_federated_learning/: __init__.py  main.py  settings.py
src/aumos_federated_learning/adapters/: __init__.py  async_aggregator.py  attestation.py  communication_adapter.py  compression.py  dp_aggregator.py  dropout_handler.py  federated_analytics.py  fl_dashboard.py  incentive_scorer.py  lora_client.py  model_versioner.py  participant_auth.py  participant_registry.py  pytorch_client.py  secure_aggregation.py  simulation_runner.py  tensorflow_client.py  validation_runner.py
src/aumos_federated_learning/adapters/strategies/: __init__.py  fed_df.py  fedavg.py  fedprox.py  scaffold.py
src/aumos_federated_learning/api/: __init__.py  router.py  schemas.py
src/aumos_federated_learning/core/: interfaces.py  models.py  services.py
